# chess

./: Cargo.toml
src/: board.rs  check.rs  chess.org  display.rs  main.rs  piece.rs  program.org  rules.org  state.rs  test.rs  types.rs
src/display/: board_widget.rs  dynamic.rs  mod.rs  print.rs
src/display/events/: key_press.rs  mod.rs  mouse_move.rs  resize.rs
src/ui/: mod.rs
