[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
crossterm = "0.26.1"
inquire = "0.6.2"
rand = "0.8.5"
serde = "1.0.163"
serde_json = "1.0.96"
# atty = "0.2.14"
termcolor = "1.1"
thiserror = "1.0.40"
tui = "0.19.0"
